[gd_scene load_steps=21 format=3 uid="uid://buf303bo03piu"]

[ext_resource type="Script" uid="uid://cw1jmoll1croj" path="res://entities/bosses/worm/worm_boss_body.gd" id="1_u7jwm"]
[ext_resource type="SpriteFrames" uid="uid://byk3qb8ofvyaf" path="res://entities/bosses/worm/spriteframes/body_spriteframes.tres" id="2_o5krg"]
[ext_resource type="Shader" uid="uid://n4chem2otws2" path="res://shaders/entity_shader.gdshader" id="2_wkfbj"]
[ext_resource type="Script" uid="uid://2akmfsdx7k6s" path="res://commons/components/component_container.gd" id="4_drxb8"]
[ext_resource type="Script" uid="uid://c3dex51h0lylc" path="res://commons/components/sfx/hit_flash_component.gd" id="4_mox22"]
[ext_resource type="Script" uid="uid://chv2lphkgpnes" path="res://commons/components/etc/hurtbox_component.gd" id="6_wf3iq"]
[ext_resource type="Script" uid="uid://dkij5hjdnu422" path="res://commons/components/etc/hitbox_component.gd" id="7_jag7s"]
[ext_resource type="Script" uid="uid://cktu0h1knqsbd" path="res://entities/projectiles/spawners/projectile_spawner_container.gd" id="8_as2gu"]
[ext_resource type="Script" uid="uid://duxclkhsalect" path="res://entities/projectiles/spawners/circle_proj_spawner.gd" id="8_mt7wx"]
[ext_resource type="PackedScene" uid="uid://bt10he0p0pvkk" path="res://particles/projectile_hit_particles.tscn" id="9_mt7wx"]
[ext_resource type="PackedScene" uid="uid://rj3hxypveqt8" path="res://particles/projectile_particles.tscn" id="10_mt7wx"]
[ext_resource type="Script" uid="uid://cj1v18sw0p68j" path="res://entities/projectiles/types/homing_projectile_data.gd" id="11_drxb8"]
[ext_resource type="Script" uid="uid://sj2recp8wcj2" path="res://entities/projectiles/spawners/target_proj_spawner.gd" id="12_6o3cl"]
[ext_resource type="Texture2D" uid="uid://svljeuy5vjqj" path="res://assets/texture/projectiles/npc/square1.png" id="12_mt7wx"]
[ext_resource type="Resource" uid="uid://btj1wpnlgy41t" path="res://entities/projectiles/resources/enemies/bullet.tres" id="13_nwbkw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s0e6k"]
shader = ExtResource("2_wkfbj")
shader_parameter/outline_enabled = true
shader_parameter/outline_color = Color(1, 0, 0, 1)
shader_parameter/outline_size = 1.0
shader_parameter/alpha_threshold = 0.0
shader_parameter/outline_samples = 4
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_strength = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yderm"]
radius = 23.0217

[sub_resource type="CircleShape2D" id="CircleShape2D_g12io"]
radius = 16.0312

[sub_resource type="CircleShape2D" id="CircleShape2D_6o3cl"]
radius = 4.0

[sub_resource type="Resource" id="Resource_6pfj2"]
script = ExtResource("11_drxb8")
target_group = "player"
rotate_speed = 90.0
chase_delay = 0.6
texture = ExtResource("12_mt7wx")
texture_rotate_with_dir = false
collision_shape = SubResource("CircleShape2D_6o3cl")
shape_offset = Vector2(0, 0)
collision_mask = 1
speed = 70.0
damage = 1.0
life_time = 4.0
vfx_color = Color(1, 0, 0, 1)
on_hit_vfx = ExtResource("9_mt7wx")
use_particles = true
particles = ExtResource("10_mt7wx")
metadata/_custom_type_script = "uid://cj1v18sw0p68j"

[node name="WormBossBody" type="Node2D"]
script = ExtResource("1_u7jwm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_s0e6k")
sprite_frames = ExtResource("2_o5krg")
autoplay = "default"

[node name="JointSegmentPos" type="Marker2D" parent="."]
position = Vector2(0, -31)

[node name="Components" type="Node2D" parent="."]
script = ExtResource("4_drxb8")
metadata/_custom_type_script = "uid://2akmfsdx7k6s"

[node name="HitFlashComponent" type="Node" parent="Components" node_paths=PackedStringArray("sprite", "entity")]
script = ExtResource("4_mox22")
sprite = NodePath("../../AnimatedSprite2D")
entity = NodePath("../..")
metadata/_custom_type_script = "uid://c3dex51h0lylc"

[node name="HurtboxComponent" type="Area2D" parent="Components" node_paths=PackedStringArray("entity")]
collision_layer = 16
collision_mask = 0
script = ExtResource("6_wf3iq")
active = false
entity = NodePath("../..")
metadata/_custom_type_script = "uid://chv2lphkgpnes"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/HurtboxComponent"]
shape = SubResource("CircleShape2D_yderm")

[node name="HitboxComponent" type="Area2D" parent="Components" node_paths=PackedStringArray("entity")]
collision_layer = 0
script = ExtResource("7_jag7s")
entity = NodePath("../..")
metadata/_custom_type_script = "uid://dkij5hjdnu422"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/HitboxComponent"]
shape = SubResource("CircleShape2D_g12io")

[node name="Spawners" type="Node2D" parent="."]
script = ExtResource("8_as2gu")
metadata/_custom_type_script = "uid://cktu0h1knqsbd"

[node name="CircleProjectileSpawner" type="Node2D" parent="Spawners"]
script = ExtResource("8_mt7wx")
number_of_projectile = 2
type = 1
projectile_data = SubResource("Resource_6pfj2")
projectile_direction = Vector2(1, 0)
active = false
metadata/_custom_type_script = "uid://duxclkhsalect"

[node name="TargetProjectileSpawner" type="Node2D" parent="Spawners"]
script = ExtResource("12_6o3cl")
projectile_data = ExtResource("13_nwbkw")
active = false
metadata/_custom_type_script = "uid://sj2recp8wcj2"

[node name="ShootTrigger" type="VisibleOnScreenNotifier2D" parent="."]
